fix: simplify controller and add validation with @Valid