@@ -1,13 +1,17 @@
 package prog.hei.app.endpoint.rest.controller;
 
+import jakarta.validation.Valid;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.web.bind.annotation.*;
 import prog.hei.app.dto.bookEdition.request.BookEditionRequest;
 import prog.hei.app.dto.bookEdition.response.BookEditionResponse;
+import prog.hei.app.entity.Book;
+import prog.hei.app.entity.BookEdition;
+import prog.hei.app.exception.BookNotFoundException;
 import prog.hei.app.mapper.BookEditionMapper;
+import prog.hei.app.repository.BookRepository;
 import prog.hei.app.service.BookEditionService;
 
 @RestController
@@ -17,26 +21,43 @@ public class BookEditionController {
 
   private final BookEditionService service;
   private final BookEditionMapper mapper;
+  private final BookRepository bookRepository;
 
   @PostMapping
-  public BookEditionResponse create(@RequestBody BookEditionRequest request) {
-    return mapper.toResponse(service.create(mapper.toEntity(request)));
+  public BookEditionResponse create(@RequestBody @Valid BookEditionRequest request) {
+
+    Book book =
+        bookRepository
+            .findById(request.bookId())
+            .orElseThrow(() -> new BookNotFoundException(request.bookId()));
+
+    BookEdition entity = mapper.toEntity(request, book);
+
+    return mapper.toResponse(service.create(entity));
   }
 
   @GetMapping
   public List<BookEditionResponse> getAll() {
-    return service.getAll().stream().map(mapper::toResponse).collect(Collectors.toList());
+    return service.findAll().stream().map(mapper::toResponse).toList();
   }
 
   @GetMapping("/{id}")
   public BookEditionResponse getById(@PathVariable UUID id) {
-    return mapper.toResponse(service.getById(id));
+    return mapper.toResponse(service.findById(id));
   }
 
   @PutMapping("/{id}")
   public BookEditionResponse update(
-      @PathVariable UUID id, @RequestBody BookEditionRequest request) {
-    return mapper.toResponse(service.update(id, mapper.toEntity(request)));
+      @PathVariable UUID id, @RequestBody @Valid BookEditionRequest request) {
+
+    Book book =
+        bookRepository
+            .findById(request.bookId())
+            .orElseThrow(() -> new BookNotFoundException(request.bookId()));
+
+    BookEdition entity = mapper.toEntity(request, book);
+
+    return mapper.toResponse(service.update(id, entity));
   }
 
   @DeleteMapping("/{id}")
